<resources>
    <string name="app_name">Mathematix</string>
    <string name="menu_item_summation_title">Сложение</string>
    <string name="menu_item_subtraction_title">Вычитание</string>
    <string name="menu_item_multiplication_title">Умножение</string>
    <string name="menu_item_division_title">Деление</string>

    <string name="button_generate_create">Создать</string>
    <string name="button_generate_verify">Проверить</string>


    <string name="img_settings_description">Settings</string>

    <string name="tv_number1_desc_summa">Первое слагаемое</string>
    <string name="tv_number2_desc_summa">Второе слагаемое</string>

    <string name="tv_number1_desc_subtract">Вычитаемое</string>
    <string name="tv_number2_desc_subtract">Разность</string>

    <string name="tv_number1_desc_multi">Первый множитель</string>
    <string name="tv_number2_desc_multi">Второй множитель</string>

    <string name="tv_number1_desc_divide">Делитель</string>
    <string name="tv_number2_desc_divide">Частное</string>

    <string name="number_range_hint_min">От</string>
    <string name="number_range_hint_max">До</string>

    <string name="tv_equal_text">=</string>
    <string name="math_sign_plus">+</string>
    <string name="math_sign_minus">-</string>
    <string name="math_sign_mult">&#183;</string>
    <string name="math_sign_divide">:</string>

</resources>